--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,15 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      let lastTouch = 0
+      document.addEventListener('touchend', event => {
+        const now = window.performance.now()
+        if (now - lastTouch <= 500) {
+          event.preventDefault()
+        }
+        lastTouch = now
+      }, true)
+    </script>
   </body>
 </html>
