--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lora|Noto+Serif+JP|Noto+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="preload" href="/img/checkers/catalog.png" as="image">
+    <link rel="preload" href="/img/checkers/cross.png" as="image">
+    <link rel="preload" href="/img/checkers/pencil.png" as="image">
+    <link rel="preload" href="/img/checkers/share.png" as="image">
   </head>
   <body>
     <noscript>
